fix colore scrollbar

--- a/style.css
+++ b/style.css
@@ -560,4 +560,4 @@ section {
             border: 2px solid #8279BB;}
 
      ::-webkit-scrollbar-thumb:hover{
-            background-color: #070514;}
+            background-color: rgb(191, 218, 16, 0.7);}
